// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`N8nDropdownMenuItem > rendering > should render checked item with checkmark 1`] = `
<div
  class="item"
  data-reka-collection-item=""
  role="menuitem"
  tabindex="-1"
>
  
  
  
  
  <!--v-if-->
  
  
  <span
    class="n8n-text text-dark size-medium regular item-label item-label"
  >
    
    Checked Item
    
  </span>
  
  
  
  <svg
    aria-hidden="true"
    class="n8n-icon item-check"
    data-icon="check"
    fill="currentColor"
    focusable="false"
    height="16px"
    role="img"
    viewBox="0 0 16 16"
    width="16px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15.56 3.25 6 12.81.44 7.25 1.5 6.19l4.5 4.5 8.5-8.5z"
      fill-opacity=".87"
    />
  </svg>
  
  
  
</div>
`;

exports[`N8nDropdownMenuItem > rendering > should render disabled item 1`] = `
<div
  aria-disabled="true"
  class="item is-disabled"
  data-disabled=""
  data-reka-collection-item=""
  role="menuitem"
  tabindex="-1"
>
  
  
  
  
  <!--v-if-->
  
  
  <span
    class="n8n-text text-xlight size-medium regular item-label item-label"
  >
    
    Disabled Item
    
  </span>
  
  
  
  <!--v-if-->
  
  
  
</div>
`;

exports[`N8nDropdownMenuItem > rendering > should render item with emoji 1`] = `
<div
  class="item"
  data-reka-collection-item=""
  role="menuitem"
  tabindex="-1"
>
  
  
  
  
  <span
    class="item-leading emoji"
  >
    🎉
  </span>
  
  
  <span
    class="n8n-text text-dark size-medium regular item-label item-label"
  >
    
    With Emoji
    
  </span>
  
  
  
  <!--v-if-->
  
  
  
</div>
`;

exports[`N8nDropdownMenuItem > rendering > should render item with icon 1`] = `
<div
  class="item"
  data-reka-collection-item=""
  role="menuitem"
  tabindex="-1"
>
  
  
  
  
  <svg
    aria-hidden="true"
    class="n8n-icon item-leading icon"
    data-icon="user"
    fill="currentColor"
    focusable="false"
    height="16px"
    role="img"
    viewBox="0 0 16 16"
    width="16px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M11.25 1A3.75 3.75 0 0 1 15 4.75V15H3.25v-3.25H.393l.41-1.028 1.683-4.207A2.875 2.875 0 0 1 3.625 1zm-8.643 9.25H4.75v3.25h8.75v-3.25H8.25v-3a.5.5 0 0 0-.5-.5H4.008zM3.625 2.5a1.375 1.375 0 0 0 0 2.75H7.75a2 2 0 0 1 2 2v1.5h3.75v-4a2.25 2.25 0 0 0-2.25-2.25z"
      fill-opacity=".87"
    />
  </svg>
  
  
  <span
    class="n8n-text text-dark size-medium regular item-label item-label"
  >
    
    With Icon
    
  </span>
  
  
  
  <!--v-if-->
  
  
  
</div>
`;

exports[`N8nDropdownMenuItem > rendering > should render item with label 1`] = `
<div
  class="item"
  data-reka-collection-item=""
  role="menuitem"
  tabindex="-1"
>
  
  
  
  
  <!--v-if-->
  
  
  <span
    class="n8n-text text-dark size-medium regular item-label item-label"
  >
    
    Test Item
    
  </span>
  
  
  
  <!--v-if-->
  
  
  
</div>
`;

exports[`N8nDropdownMenuItem > rendering > should render separator when divided is true 1`] = `
<div
  class="wrapper"
>
  <div
    aria-orientation="horizontal"
    class="separator"
    role="separator"
  >
    
    
  </div>
  
  <!-- Regular item without children -->
  <div
    class="item"
    data-reka-collection-item=""
    role="menuitem"
    tabindex="-1"
  >
    
    
    
    
    <!--v-if-->
    
    
    <span
      class="n8n-text text-dark size-medium regular item-label item-label"
    >
      
      Divided Item
      
    </span>
    
    
    
    <!--v-if-->
    
    
    
  </div>
  
</div>
`;

exports[`N8nDropdownMenuItem > rendering > should render sub-menu trigger when has children 1`] = `
<div
  aria-controls=""
  aria-expanded="false"
  aria-haspopup="menu"
  class="item sub-trigger"
  data-reka-collection-item=""
  data-state="closed"
  id="reka-menu-sub-trigger-v-1"
  role="menuitem"
  tabindex="-1"
>
  
  
  
  
  <!--v-if-->
  
  
  <span
    class="n8n-text text-dark size-medium regular item-label item-label"
  >
    
    Parent Item
    
  </span>
  
  <svg
    aria-hidden="true"
    class="n8n-icon sub-indicator"
    data-icon="chevron-right"
    fill="currentColor"
    focusable="false"
    height="16px"
    role="img"
    viewBox="0 0 16 16"
    width="16px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m10.608 7-5.67 5.67-.795-.795L9.018 7 4.142 2.125l.795-.795z"
    />
  </svg>
  
  
  
</div>
`;
